2011-10-22  KUBO Takehiro  <kubo@jiubao.org>
	* ext/oci8/attr.c, ext/oci8/bind.c, ext/oci8/connection_pool.c,
	  ext/oci8/error.c, ext/oci8/lob.c, ext/oci8/metadata.c,
	  ext/oci8/object.c, ext/oci8/oci8.c, ext/oci8/oci8.h,
	  ext/oci8/oci8lib.c, ext/oci8/ocidatetime.c, ext/oci8/ocihandle.c,
	  ext/oci8/ocinumber.c, ext/oci8/stmt.c: add OCI8#last_error and
	    OCI8#last_error=. When an exception is raised associated with a
	    connection, the exception is set to OCI8#last_error.
	    No OCISuccessWithInfo excpetion is raised from now on. It is
	    set to OCI8#last_error instead.

2011-10-22  KUBO Takehiro  <kubo@jiubao.org>
	* ext/oci8/error.c, test/test_break.rb, test/test_error.rb: change the super
	    class of OCINoData from OCIException to OCIError and fix testcases for
	    OCIError and its subclasses.

2011-10-22  KUBO Takehiro  <kubo@jiubao.org>
	* ext/oci8/lob.c, ext/oci8/oci8.c, ext/oci8/ocinumber.c:
	    delete code for Oracle 8 and Oracle 8i.

2011-10-21  KUBO Takehiro  <kubo@jiubao.org>
	* ext/oci8/error.c, ext/oci8/oci8.h: refactor OCIException and its
	    subclasses. OCIError#codes and OCIError#messages are deleted.
	* test/test_all.rb, test/test_error.rb: add a testcase to check
	    OCIException's methods.

2011-10-21  KUBO Takehiro  <kubo@jiubao.org>
	* ext/oci8/oraconf.rb: fix checking code whether 'sys/types.h' is
	    available for Ubuntu 11.10 where sys/types.h is not right under
	    /usr/include.

2011-10-21  KUBO Takehiro  <kubo@jiubao.org>
	* ext/oci8/oraconf.rb: remove code to get linker options for Oracle 8
	    and Oracle 8i.

2011-10-17  KUBO Takehiro  <kubo@jiubao.org>
	* ext/oci8/oraconf.rb: embed a run-time loading path to the extention
	    library oci8lib_*.so compiled for not only full clients, but also
	    instant clients on Linux and Solaris.
	    (suggested by d c and others.)

2011-10-09  KUBO Takehiro  <kubo@jiubao.org>
	* ext/oci8/ocidatetime.c, lib/oci8/datetime.rb, lib/oci8/object.rb: